# multiagents

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDELINES.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.sh  start.sh
.github/workflows/: ci.yml
clients/discord/: .env.example  README.md  pyproject.toml
clients/discord/src/: __main__.py  allowlist.py  bot.py  bridge.py  config.py  formatter.py
clients/discord/tests/: test_allowlist.py  test_bot.py  test_bridge.py  test_config.py  test_formatter.py
docs/: discord-setup-guide.md  quickstart.md  ui-migration-playbook.md
docs/plans/: 2026-02-05-discord-client-design.md  2026-02-05-discord-client-plan.md
scripts/: multiagents-cards
src/: main.py
src/agents/: __init__.py  base.py  claude.py  codex.py  kimi.py  persistent.py  prompts.py
src/cards/: __init__.py  engine.py  models.py
src/chat/: events.py  room.py  router.py
src/memory/: __init__.py  cli.py  discovery.py  manager.py  recorder.py  store.py
src/server/: app.py  protocol.py  runner.py  (+2 more)
tests/: conftest.py  test_base_agent.py  test_card_engine.py  test_codex_protocol.py  test_coordination_parity.py  test_filesystem.py  test_kimi_protocol.py  test_memory_cli.py  test_memory_discovery.py  test_memory_integration.py  test_memory_manager.py  test_memory_recorder.py  test_memory_store.py  test_permission_events.py  test_persistent_agent.py  test_room.py  test_router.py  test_runner_cards.py  test_settings.py  test_settings_api.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+53 files in other folders)
