[project]
name = "multiagents"
version = "0.1.0"
description = "Multi-agent group chat with Claude Code, Codex, and Kimi"
readme = "README.md"
license = "MIT"
authors = [{ name = "Leonardo Courbassier" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "websockets>=14.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
multiagents = "src.main:main"

[project.urls]
Homepage = "https://github.com/leonardocbsr/multiagents"
Repository = "https://github.com/leonardocbsr/multiagents"
Issues = "https://github.com/leonardocbsr/multiagents/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
